:sparkles: Add Sort by Training Center Rating

--- a/app/src/main/res/layout/folding_cell_unfolded_content.xml
+++ b/app/src/main/res/layout/folding_cell_unfolded_content.xml
@@ -17,6 +17,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -45,8 +46,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:text="AISECT TRAINING CENTER"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    tools:text="AISECT TRAINING CENTER" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -64,8 +65,8 @@
                         android:id="@+id/demand_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="5"
-                        android:textSize="20sp" />
+                        android:textSize="20sp"
+                        tools:text="5" />
                 </LinearLayout>
             </RelativeLayout>
 
@@ -90,7 +91,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
-                        android:text="Training Partner: AISECT" />
+                        tools:text="Training Partner: AISECT" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -109,7 +110,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
-                        android:text="Course Fee: 25000" />
+                        tools:text="Course Fee: 25000" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -128,7 +129,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
-                        android:text="Job Role: Senior Dairy Manager" />
+                        tools:text="Job Role: Senior Dairy Manager" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -147,7 +148,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
-                        android:text="Course Duration: 8 weeks" />
+                        tools:text="Course Duration: 8 weeks" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -166,7 +167,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center|start"
-                        android:text="Address: 25/53, AMmpa Nagar,Karna,Delhi" />
+                        tools:text="Address: 25/53, AMmpa Nagar,Karna,Delhi" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -188,9 +189,9 @@
                         android:layout_height="match_parent"
                         android:background="?selectableItemBackground"
                         android:gravity="center|start"
-                        android:text="CONTACT"
                         android:textColor="@color/primary"
-                        android:textStyle="bold" />
+                        tools:text="CONTACT"
+                        tools:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
