--- a/app/src/main/res/layout/folding_cell_folded_content.xml
+++ b/app/src/main/res/layout/folding_cell_folded_content.xml
@@ -17,6 +17,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -38,16 +39,15 @@
                 android:weightSum="1">
 
                 <TextView
-                    android:id="@+id/training_center_name"
+                    android:id="@+id/training_center_folded"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_weight="0.99"
                     android:padding="10dp"
-                    android:text="Training Centre: AISECT TRAINING CENTER" />
+                    tools:text="Training Centre: AISECT TRAINING CENTER" />
 
                 <LinearLayout
-                    android:id="@+id/rating"
                     android:layout_width="66dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -62,13 +62,12 @@
                         android:src="@drawable/ic_rating" />
 
                     <TextView
+                        android:id="@+id/rating_folded"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="5"
-                        android:textSize="20dp" />
-
+                        android:textSize="20dp"
+                        tools:text="5" />
                 </LinearLayout>
-
             </LinearLayout>
 
             <LinearLayout
@@ -78,23 +77,24 @@
                 android:weightSum="1">
 
                 <TextView
+                    android:id="@+id/course_fee_folded"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/training_center_name"
+                    android:layout_below="@id/training_center_folded"
                     android:layout_weight="0.99"
                     android:padding="10dp"
-                    android:text="Course Fee: 25000" />
+                    tools:text="Course Fee: 25000" />
 
                 <TextView
-                    android:id="@+id/distance"
+                    android:id="@+id/distance_folded"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:layout_below="@id/rating"
+                    android:layout_below="@id/rating_folded"
                     android:padding="10dp"
-                    android:text="3km"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    tools:text="3km" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
