--- a/app/src/main/res/layout/folding_cell_folded_content.xml
+++ b/app/src/main/res/layout/folding_cell_folded_content.xml
@@ -35,21 +35,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="1">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/training_center_folded"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
-                    android:layout_weight="0.99"
+                    android:layout_weight="1"
                     android:padding="10dp"
-                    tools:text="Training Centre: AISECT TRAINING CENTER" />
+                    android:textSize="20sp"
+                    tools:text="AISECT TRAINING CENTER" />
 
                 <LinearLayout
                     android:layout_width="66dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:orientation="horizontal"
@@ -57,15 +57,19 @@
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:foregroundGravity="center"
                         android:paddingRight="5dp"
                         android:src="@drawable/ic_rating" />
 
                     <TextView
                         android:id="@+id/rating_folded"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="20dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textSize="22dp"
                         tools:text="5" />
                 </LinearLayout>
             </LinearLayout>
@@ -73,17 +77,28 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="1">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/course_fee_folded"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/training_center_folded"
-                    android:layout_weight="0.99"
-                    android:padding="10dp"
-                    tools:text="Course Fee: 25000" />
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="12dp"
+                        android:src="@drawable/ic_rupee" />
+
+                    <TextView
+                        android:id="@+id/course_fee_folded"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_below="@id/training_center_folded"
+                        android:padding="10dp"
+                        android:textSize="20dp"
+                        tools:text="25000" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/distance_folded"
