--- a/app/src/main/res/layout/fragment_dashboard_learner.xml
+++ b/app/src/main/res/layout/fragment_dashboard_learner.xml
@@ -170,6 +170,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
+                android:foreground="?selectableItemBackground"
                 android:layout_weight="1">
 
                 <LinearLayout
@@ -205,7 +206,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:foreground="?selectableItemBackground"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -235,13 +235,13 @@
             <android.support.v7.widget.CardView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:foreground="?selectableItemBackground"
                 android:layout_margin="8dp"
                 android:layout_weight="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:foreground="?selectableItemBackground"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -265,12 +265,13 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_margin="8dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:foreground="?selectableItemBackground"
+                android:onClick="reportIssuesOnClick">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:foreground="?selectableItemBackground"
                     android:gravity="center"
                     android:orientation="vertical">
 
@@ -279,7 +280,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="8dp"
-                        android:src="@drawable/ic_bug" />
+                        android:src="@drawable/ic_question" />
 
                     <TextView
                         android:layout_width="wrap_content"
