--- a/app/src/main/res/layout/activity_training_center_detail.xml
+++ b/app/src/main/res/layout/activity_training_center_detail.xml
@@ -64,7 +64,7 @@
                     android:id="@+id/icon"
                     android:layout_width="172dp"
                     android:layout_height="172dp"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@drawable/toolbox" />
             </LinearLayout>
 
             <android.support.v7.widget.Toolbar
